force-app/main/default/objects/ER_Financial_Center__c/ER_Financial_Center__c.object-meta.xml
<CustomObject>
    <label>Financial Center</label>
    <nameField>
        <label>Financial Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Centers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>