force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>ER_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Centers</relationshipLabel>
    <relationshipName>Financial_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>