force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Accounting_System_ID__c.field-meta.xml
<CustomField>
    <fullName>ER_Accounting_System_ID__c</fullName>
    <label>Accounting System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>