force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>ER_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>ER_Bank_Account__c</referenceTo>
    <relationshipLabel>Financial Centers</relationshipLabel>
    <relationshipName>Financial_Centers_BankAccount</relationshipName>
    <type>Lookup</type>
</CustomField>