force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Card_Operational_System_ID__c.field-meta.xml
<CustomField>
    <fullName>ER_Card_Operational_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>Card Operational System ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>