force-app/main/default/objects/ER_Financial_Center__c/fields/ER_City__c.field-meta.xml
<CustomField>
    <fullName>ER_City__c</fullName>
    <label>Billing City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>