force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Contact__c.field-meta.xml
<CustomField>
    <fullName>ER_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.ER_Account_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Centers</relationshipLabel>
    <relationshipName>Financial_Centers_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>