force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Country__c.field-meta.xml
<CustomField>
    <fullName>ER_Country__c</fullName>
    <label>Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>