force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Creation_date_in_OS__c.field-meta.xml
<CustomField>
    <fullName>ER_Creation_date_in_OS__c</fullName>
    <description>Use as a reference for EDG data creation</description>
    <label>Creation date in OS</label>
    <type>DateTime</type>
</CustomField>