force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Invoicing_Region_State__c.field-meta.xml
<CustomField>
    <fullName>ER_Invoicing_Region_State__c</fullName>
    <label>Invoicing Region/State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>