force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Invoicing_Site__c.field-meta.xml
<CustomField>
    <fullName>ER_Invoicing_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoicing Site ?</label>
    <type>Checkbox</type>
</CustomField>