force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Invoicing_Street__c.field-meta.xml
<CustomField>
    <fullName>ER_Invoicing_Street__c</fullName>
    <label>Invoicing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>