force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Invoicing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>ER_Invoicing_Zip_Code__c</fullName>
    <label>Invoicing Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>