force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Last_Modified_By_Functional_user__c.field-meta.xml
<CustomField>
    <fullName>ER_Last_Modified_By_Functional_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By Functional user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>