force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Last_Modified_Date_Functional_User__c.field-meta.xml
<CustomField>
    <fullName>ER_Last_Modified_Date_Functional_User__c</fullName>
    <label>Last Modified Date Functional User</label>
    <type>DateTime</type>
</CustomField>