force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Last_Synchronization_Date__c.field-meta.xml
<CustomField>
    <fullName>ER_Last_Synchronization_Date__c</fullName>
    <label>Last Synchronization Date</label>
    <type>DateTime</type>
</CustomField>