force-app/main/default/objects/ER_Financial_Center__c/fields/ER_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ER_LastModifiedBy__c</fullName>
    <formula>IF ( DATEVALUE(LastModifiedDate) &gt;= DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1)
+
( 14 - CASE( MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1) - DATE (1900,1,7),7))
)

&amp;&amp;

DATEVALUE(LastModifiedDate) &lt; DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) +
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) - DATE (1900,1,7),7))
),

/*check if the last modified by is filled */
IF( ER_Last_Modified_By_Functional_user__c  != null, 

/* if true */

HYPERLINK(LEFT($Api.Partner_Server_URL_420, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_420)) + 
               &#39;/lightning/r/User/&#39; + ER_Last_Modified_By_Functional_user__c + &#39;/view&#39;,ER_Last_Modified_By_Functional_user__r.FirstName  + &#39; &#39; + ER_Last_Modified_By_Functional_user__r.LastName) +  &#39;, &#39; + 
               TEXT(DAY(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &#39;/&#39; +  
               TEXT(MONTH(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &#39;/&#39; + 
               TEXT(YEAR(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &#39; &#39; +  
               TEXT(HOUR(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &#39;:&#39; +  
               TEXT(MINUTE(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))), 

/* else */
&#39;&#39;) 

,


/*check if the last modified by is filled */
IF(ER_Last_Modified_By_Functional_user__c != null, 

/* if true */

HYPERLINK(LEFT($Api.Partner_Server_URL_420, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_420)) + 
               &#39;/lightning/r/User/&#39; + ER_Last_Modified_By_Functional_user__c + &#39;/view&#39;,ER_Last_Modified_By_Functional_user__r.FirstName + &#39; &#39; + ER_Last_Modified_By_Functional_user__r.LastName) +  &#39;, &#39; + 
               TEXT(DAY(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &#39;/&#39; +  
               TEXT(MONTH(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &#39;/&#39; + 
               TEXT(YEAR(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &#39; &#39; +  
               TEXT(HOUR(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &#39;:&#39; +  
               TEXT(MINUTE(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))), 

/* else */
&#39;&#39;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By Functional User</label>
    <type>Text</type>
</CustomField>