force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Paper_MO__c.field-meta.xml
<CustomField>
    <fullName>ER_Paper_MO__c</fullName>
    <label>Paper Middle Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ER_Middle_Office</valueSetName>
    </valueSet>
</CustomField>