force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Paper_Operational_System_ID__c.field-meta.xml
<CustomField>
    <fullName>ER_Paper_Operational_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>Paper Operational System ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>