force-app/main/default/objects/ER_Financial_Center__c/fields/ER_State_Province__c.field-meta.xml
<CustomField>
    <fullName>ER_State_Province__c</fullName>
    <label>Billing State/ Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>