force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Sync_result__c.field-meta.xml
<CustomField>
    <fullName>ER_Sync_result__c</fullName>
    <label>Sync result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>