force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Type__c.field-meta.xml
<CustomField>
    <fullName>ER_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>