force-app/main/default/objects/ER_Financial_Center__c/fields/ER_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>ER_Zip_Code__c</fullName>
    <label>Billing Zip Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>