force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Accepts_New_Billing_System_PA__c.field-meta.xml
<CustomField>
    <fullName>IT_Accepts_New_Billing_System_PA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepts New Billing System PA</label>
    <type>Checkbox</type>
</CustomField>