force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Account_Active__c.field-meta.xml
<CustomField>
    <fullName>IT_Account_Active__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Active)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Centers (Active)</relationshipLabel>
    <relationshipName>Financial_Centers1</relationshipName>
    <type>Lookup</type>
</CustomField>