force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Account_Closed__c.field-meta.xml
<CustomField>
    <fullName>IT_Account_Closed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Closed)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Centers (Closed)</relationshipLabel>
    <relationshipName>Financial_Centers2</relationshipName>
    <type>Lookup</type>
</CustomField>