force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Account_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>IT_Account_Provisioning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Provisioning)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Centers (Provisioning)</relationshipLabel>
    <relationshipName>Financial_Centers3</relationshipName>
    <type>Lookup</type>
</CustomField>