force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Address_AC_User__c.field-meta.xml
<CustomField>
    <fullName>IT_Address_AC_User__c</fullName>
    <label>Address AC User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>