force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Address_Editing_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Address_Editing_Type__c</fullName>
    <label>Address Editing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>