force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Admin_Data_Validity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Admin_Data_Validity_Start_Date__c</fullName>
    <label>Admin Data Validity Start Date</label>
    <type>Date</type>
</CustomField>