force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Associated_Client__c.field-meta.xml
<CustomField>
    <fullName>IT_Associated_Client__c</fullName>
    <externalId>true</externalId>
    <label>Associated Client</label>
    <length>6</length>
    <type>Text</type>
</CustomField>