force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Change_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Change_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Address</label>
    <type>Checkbox</type>
</CustomField>