force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Circuit__c.field-meta.xml
<CustomField>
    <fullName>IT_Circuit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circuit</label>
    <referenceTo>IT_Circuit__c</referenceTo>
    <relationshipLabel>Financial Centers</relationshipLabel>
    <relationshipName>Financial_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>