force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Client_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Client_Activation_Date__c</fullName>
    <label>Client Activation Date</label>
    <type>Date</type>
</CustomField>