force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Client_Situation__c.field-meta.xml
<CustomField>
    <fullName>IT_Client_Situation__c</fullName>
    <label>Client Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>NORMAL</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>ADMINISTRATION OF CONTROLLED</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>COMPULSORY IN ADMINISTRATION</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>IN EXTRAORDINARY ADMINISTRATION</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>IN LIQUIDATION</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>IN COMPULSORY WINDING</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>AGREED IN QUOTE</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>FAILURE</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>IN COMPULSORY WINDING AMM.VA</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>IN LIQUIDATION AND CONCORD. PREV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>