force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Client_Status__c.field-meta.xml
<CustomField>
    <fullName>IT_Client_Status__c</fullName>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>PROVISIONAL CUSTOMER</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>IN DEFINITION</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>IN DEFINING ONLINE</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>TO ACTIVATE</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>ACTIVE</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>CANCELED</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>CANCELED NON-PAYMENT</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>SUSPENDED</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>TO ARRANGE</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>POTENTIAL ESPADA</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>CLIENTS WAITING FOR THE CODE 6</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>CUSTOMERS IN DEF. PROBABLE DELETE</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>TO CANCEL</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>DEFINITELY CANCELED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>