force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Complex Client</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Simple Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>