force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>