force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Concurrency__c.field-meta.xml
<CustomField>
    <fullName>IT_Concurrency__c</fullName>
    <label>Concurrency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Concurrency</valueSetName>
    </valueSet>
</CustomField>