force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Confirm_Flow__c.field-meta.xml
<CustomField>
    <fullName>IT_Confirm_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Flow</label>
    <type>Checkbox</type>
</CustomField>