force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Contract__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Financial Centers</relationshipLabel>
    <relationshipName>Financial_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>