force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Contract_Expiraction_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Expiraction_Date__c</fullName>
    <formula>IT_Contract__r.IT_Expiration_Contract_Date__c</formula>
    <label>Contract Expiraction Date</label>
    <type>Date</type>
</CustomField>