force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Count_Request__c.field-meta.xml
<CustomField>
    <fullName>IT_Count_Request__c</fullName>
    <label>Count Request</label>
    <summaryFilterItems>
        <field>IT_Request__c.IT_Request_Status__c</field>
        <operation>equals</operation>
        <value>AUTHORIZED</value>
    </summaryFilterItems>
    <summaryForeignKey>IT_Request__c.IT_Financial_Center__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>