force-app/main/default/objects/ER_Financial_Center__c/fields/IT_CurrentDate__c.field-meta.xml
<CustomField>
    <fullName>IT_CurrentDate__c</fullName>
    <formula>TEXT(DAY(Today()))+&quot; &quot; +CASE(MONTH(Today()),
1, &quot;gennaio&quot;,
2, &quot;febbraio&quot;,
3, &quot;marzo&quot;, 
4, &quot;aprile&quot;, 
5, &quot;maggio&quot;, 
6, &quot;giugno&quot;,
7, &quot;luglio&quot;,
8, &quot;agosto&quot;,
9, &quot;settembre&quot;,
10, &quot;ottobre&quot;,
11, &quot;novembre&quot;,
12, &quot;dicembre&quot;,
&quot;None&quot;)+&quot; &quot; +TEXT(YEAR(Today()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentDate</label>
    <type>Text</type>
</CustomField>