force-app/main/default/objects/ER_Financial_Center__c/fields/IT_DEMO_FEE__c.field-meta.xml
<CustomField>
    <fullName>IT_DEMO_FEE__c</fullName>
    <label>Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>