force-app/main/default/objects/ER_Financial_Center__c/fields/IT_DEMO_Financial_Center__c.field-meta.xml
<CustomField>
    <fullName>IT_DEMO_Financial_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Center</label>
    <referenceTo>ER_Financial_Center__c</referenceTo>
    <relationshipLabel>Financial Centers</relationshipLabel>
    <relationshipName>DEMO_Financial_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>