force-app/main/default/objects/ER_Financial_Center__c/fields/IT_DEMO_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>IT_DEMO_Maintenance__c</fullName>
    <label>Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>