force-app/main/default/objects/ER_Financial_Center__c/fields/IT_DEMO_Product__c.field-meta.xml
<CustomField>
    <fullName>IT_DEMO_Product__c</fullName>
    <label>Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>