force-app/main/default/objects/ER_Financial_Center__c/fields/IT_DEMO_Start_Up__c.field-meta.xml
<CustomField>
    <fullName>IT_DEMO_Start_Up__c</fullName>
    <label>Start Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>