force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Derived_CIG__c.field-meta.xml
<CustomField>
    <fullName>IT_Derived_CIG__c</fullName>
    <label>Derived CIG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>