force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Discount__c.field-meta.xml
<CustomField>
    <fullName>IT_Discount__c</fullName>
    <formula>IT_Contract__r.IT_Commission_Discount_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT_Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>