force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Don_t_Send_Debt_Note__c.field-meta.xml
<CustomField>
    <fullName>IT_Don_t_Send_Debt_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&#39;t Send Debt Note</label>
    <type>Checkbox</type>
</CustomField>