force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Economic_Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Economic_Validity_End_Date__c</fullName>
    <label>Economic Validity End Date</label>
    <type>Date</type>
</CustomField>