force-app/main/default/objects/ER_Financial_Center__c/fields/IT_EORI_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_EORI_Code__c</fullName>
    <label>EORI Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>