force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Financial_Center__c.field-meta.xml
<CustomField>
    <fullName>IT_Financial_Center__c</fullName>
    <externalId>true</externalId>
    <label>Client Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>