force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Fused_Client__c.field-meta.xml
<CustomField>
    <fullName>IT_Fused_Client__c</fullName>
    <label>Fused Client</label>
    <length>6</length>
    <type>Text</type>
</CustomField>