force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Future_Change_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_Address__c</fullName>
    <label>Future Change Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>