force-app/main/default/objects/ER_Financial_Center__c/fields/IT_GeoRef_Loc_X__c.field-meta.xml
<CustomField>
    <fullName>IT_GeoRef_Loc_X__c</fullName>
    <label>GeoRef Loc X</label>
    <length>255</length>
    <type>Text</type>
</CustomField>