force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Hamlet__c.field-meta.xml
<CustomField>
    <fullName>IT_Hamlet__c</fullName>
    <label>Hamlet</label>
    <length>40</length>
    <type>Text</type>
</CustomField>