force-app/main/default/objects/ER_Financial_Center__c/fields/IT_Hamlet_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Hamlet_Code__c</fullName>
    <label>Hamlet Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>